# code

./: .bash_profile  .bashrc  .gitconfig  .gitignore  .gitmodules  .vimrc  68k pinout  README.md  circuit-20190101-2135.circuitjs.txt  notes.txt  setup.txt  todo.txt  ubuntu_README.md  ubuntu_READMe.md
68k/: eeprom_config  flash  link_script.l  load  log.txt  makefile  memory_map.txt  notes.txt  split  test.bin.lsb  test.bin.msb  upload
68k/Arduino_EEPROM_flasher/: Arduino_EEPROM_flasher.ino
68k/app/: app.S
68k/boot/: acia.S  core.S  interp.S  mfp.S  rodata.S  start.S  uart.S
68k/eeprom_interface/: eeprom_interface.ino
68k/test/: bare.S  init.S  init2.S  test.S  test2.S
Arduino_EEPROM_flasher/: Arduino_EEPROM_flasher.ino
Arduino_cli_test/: Arduino_cli_test.ino
FAT32/: FAT32 Notes
MPLABXProjects/PIC24Proj_Scratch.X/: MyConfig.mc3  fat.c  fat.h  header.h  main.c  notes.txt  sd.c  sd.h  task.c  task.h  tft.h
MPLABXProjects/PIC8Proj_Assist_LM.X/: MyConfig.mc3).mc3  main.c
MPLABXProjects/Pic8Proj_IO.X/: header.h  main.c
OpenGL/: vertexShader.glsl
asm/: .gitignore  LICENSE.txt  a.out  core.f  main.S  makefile  notes.txt  parse.sh  run.sh  test.S
asm/68k/: cmain.c  eeprom_config  link_script.l  main.S  makefile  memory_map.txt  notes.txt  run.sh  split  start.S  uart.S  upload.py
asm/forth/: core.f  kforth  main.S  makefile  notes_bugs.txt  run.sh
asm/jonesforth/: jonesforth  jonesforth.S
asm/riscv/: build-n-run.sh  hello  hello.c  notes.txt
asm/simd/: main.S  makefile
asm/test/: main.S
asm/x64/: notes.txt
bash/: input.txt  test.sh
bash/color/: test.sh
c/: header.h  main.c  makefile
c/color/: main.c  makefile
c/debug/: db.c  db.h  dwarf.c  dwarf.txt  install.txt  io.c  main.s  makefile  notes.txt
c/format/: checklist.txt  format  insert.xml  test.cpp  test.hpp
c/forth/: core.c  header.h  (+1 more)
config/: .bashrc  .vimrc  config.fish  notes.txt
cpp/: a.out  db.out  header.h  main.cpp  makefile  notes.txt  out
cuda/: main.cu
docker/: .start.sh.swp  Dockerfile.alpine  diff  docker_bashrc  docker_vimrc  dockerfile  fun_dockerfile  meta_dockerfile  meta_start.sh  start.sh
feat_test/: main.cpp  makefile
format/: notes.txt
go/: main.go
hpc/: makefile
linuxGL/: .gitignore  README.md  makefile
low_level/: header.h  main.s  makefile  test.out
math/: gram-schmidt.py  integrate2.cpp  prime.cpp
misc/: socket_test.c  video_game.c
oldGL/: header.h
opencl/: main.c
opengl/: OpenGL.out  main.cpp  notes.txt
pic_uc/: warn.txt
processor/: .isa.txt.swp  isa.txt  notes.txt
processor/soft_sim/: ..in  .isa.txt.swp  AUTHORS  INSTALL  Makefile  Makefile.in  README  assemble.py  bigger.asm  config.h  config.h.in  config.status  configure  configure.ac  configure.lineno  configure.scan  db.out  dispatch.c  dispatch.h  execute.c  execute.h  execute.h.gch  gmon.out  hex.txt  isa.txt  makefile  makefile.in  notes.txt  perf.sh  proc  proc.c  proc.h  setup.c  software.txt
processor/soft_sim/.deps/: dispatch.Po  execute.Po  proc-dispatch.Po  proc-execute.Po  proc-proc.Po  proc-setup.Po  proc.Po  setup.Po
processor/soft_sim/assist/: assemble.py  disassemble.py  isa.txt
processor/soft_sim/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
processor/soft_sim/check/: a.out  execute_check.c  execute_check.h  main.c  main.h  notes.txt
processor/soft_sim/fives-0.1/: Makefile.in  NEWS  README  configure  configure.ac
processor/soft_sim/fives-0.1/_build/sub/: Makefile  config.status
processor/soft_sim/fives-0.1/_build/sub/src/: Makefile  proc
processor/soft_sim/fives-0.1/_build/sub/test/: Makefile  check_proc
processor/soft_sim/fives-0.1/_build/sub/test/.deps/: check_proc-execute_test.Po
processor/soft_sim/fives-0.1/src/: Makefile.am  Makefile.in  dispatch.c  dispatch.h  execute.c  proc.c  proc.h  setup.c
processor/soft_sim/fives-0.1/test/: Makefile.in  execute_test.c
processor/soft_sim/fives-0.2/: INSTALL  configure  configure.ac
processor/soft_sim/fives-0.2/_build/sub/: Makefile  config.status
processor/soft_sim/fives-0.2/_build/sub/src/: Makefile  proc
processor/soft_sim/fives-0.2/_build/sub/src/.deps/: proc-core.Po  proc-dispatch.Po  proc-execute.Po  proc-proc.Po  proc-setup.Po
processor/soft_sim/fives-0.2/_build/sub/test/: Makefile
processor/soft_sim/fives-0.2/src/: Makefile.am  __assist.h  core.h  execute.h  proc.h  setup.c
processor/soft_sim/fives-0.2/test/: Makefile.am  Makefile.in  branch.c
processor/soft_sim/misc/: loc.sh  perf.sh
processor/soft_sim/src/: Makefile  Makefile.am  Makefile.in  core.c  core.h  dispatch.c  dispatch.h  execute.c  execute.h  fives  proc  proc.c  proc.h  setup.c  setup.h
processor/soft_sim/src/.deps/: arith-dispatch.Po  arith-execute.Po  branch-execute.Po  check_proc-dispatch.Po  check_proc-execute.Po  cntl-execute.Po  fives-core.Po  fives-dispatch.Po  fives-execute.Po  fives-proc.Po  fives-setup.Po  proc-__assist.Po  proc-core.Po  proc-dispatch.Po  proc-execute.Po  proc-proc.Po  proc-setup.Po
processor/soft_sim/test/: .cntl.src.swp  Makefile  Makefile.am  Makefile.in  arith  arith.c  arith.out  arith.src  arith.src.c  arith.src.c.out  arith_test.c  arith_test.src  arith_test.src.c  branch  branch.out  branch.src  branch.src.c  branch.src.c.test  check.out  check_proc  cntl  cntl.c  cntl.out  cntl.src  cntl.src.c  cntl.src.c.out  cproc.out  run.sh  test.h  test.out
processor/soft_sim/test/.deps/: arith-arith.Po  arith-dummy.Po  branch-branch.Po  check_proc-execute_test.Po  cntl-cntl.Po
processor/soft_sim/test/programs/bigger_test/: bigger.asm
processor/soft_sim/test/programs/jmp_add/: expected.txt  jmp_add.asm
processor/soft_sim/test_programs/bigger_test/: bigger.asm
release/: LICENSE.txt
riscv/: build.sh  hello.asm  spike.cfg
rtl/: rtl.xpr
showcase/: .readme.txt.swp  README.md  readme.txt
simple_rtl/: simple_rtl.xpr
sketch_dec22a/: sketch_dec22a.ino
support/: notes.txt
synth_stuff/: synth_stuff.xpr
systemverilog/: test.sv  v.out
text/: sed.sh  test.txt
verilog/: a.out  main.v  new  test.v
(+1736 files in other folders)
